--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
@@ -39,7 +39,7 @@
  		<button class="mobile-nav-toggle bi bi-list" aria-label="Toggle Navigation"></button>
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto" th:href="${'/personal/camera'}">Códigos</a></li>
+                <li><a class="nav-link scrollto" th:href="${'/personal/camera'}">Validación</a></li>
                 <li><a class="nav-link scrollto" th:href="${'/personal/boleto'}">Informes</a></li>
                 <li><a class="nav-link scrollto" th:href="${'/personal/pagos'}">Pagos</a></li>
                
