--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
@@ -6,14 +6,61 @@
 
 <body>
 	<header th:replace="layout/layout :: header"></header>
-	  <section id="hero1" class="d-flex align-items-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center" data-aos="fade-up" data-aos-delay="200">
-                    <h1>Rutas</h1>
-                </div>
-            </div>
-        </div>
+	   <section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+		<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
+	
+    <div class="uni">
+		<div class="section-title">
+					<h2>Ruta</h2>
+					<small>Aqui puede administrar las rutas de las unidades</small>
+				</div>
+    </div>
     </section>
 	<div class="container py-2">
   <div class="card bg-light">
