--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
@@ -14,7 +14,62 @@
 
 	 <header th:replace="layout/layout3 :: header"></header>
 	<link rel="stylesheet" th:href="@{/Administrador/style3.css}" />
+	  <section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+		<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
 	
+    <div class="uni">
+		<div class="section-title">
+					<h2>Informes</h2>
+					<small>Aqui se presenta los informes de las unidades y boletos vendidos</small>
+				</div>
+    </div>
+    </section>
 
 	<div class="container py-4">
 		<div class="card bg-light">
