--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/accountVerified.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/accountVerified.html
@@ -15,33 +15,40 @@
 	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	crossorigin="anonymous">
 </head>
+
 <body>
+ <link rel="stylesheet" th:href="@{/css/pasajero/ola.css}">
+ 
+ 
+<div class="navbar">
+		<a th:href="@{/index}">
+         <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
+         </a>
+    </div>
+    
+    
+<div class="moving-zone">
+    <div class="popup">
+        <div class="popup-content">
+            <div class="popup-text">
+               Puedes ingresar ahora al servicio.<br/>
+              <span th:text="${message}"></span>
+                <a th:href="@{/login}">inicia sesión aqui</a></span>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-					aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#" th:href="@{/}">Registro y
-					inicio de sesión</a>
-			</div>
-		</div>
-	</nav>
+    <script th:src="@{/js/pasajero/ola.js}"></script>
+    
+<footer  >
+	  
+		
+			<p class="m-0 text-center text-white">Copyright &copy; Boletos
+				online</p>
+	
+		</footer>
 
-	<br>
-	<br>
-
-   
-        <center>
-            <span th:text="${message}"></span>
-        </center>
-        <center><span>Puedes ingresar ahora al servicio <a th:href="@{/login}">inicia sesión aqui</a></span>
-   </center>
 </body>
 </html>
