--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
                         <span>No es un correo valido</span>
                     </div> 
                     <div class="type">
-                        <input class="input-group__input" type="password" placeholder="Contraseña" name="password" id="passwordSignUp" pattern="[a-z0-9] {8,}">
+                        <input class="input-group__input" type="password" placeholder="Contraseña" name="password" id="passwordSignUp" >
                         <span class="input-group__error">Ingresa digitos y letras, minimo 8 caracteres</span>
                     </div><br><br>
 
