--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
@@ -526,14 +526,45 @@ input-group__input {
 
  .alert-info {
       color: white; /* Establece el color del texto a blanco */
-      background-color: greenyellow;  /* Puedes ajustar el color de fondo según tus necesidades */
+      background-color: seagreen;  /* Puedes ajustar el color de fondo según tus necesidades */
       padding: 15px;
       border-radius: 5px;
     }
     
+     .alert {
+      margin-bottom: 20px;
+    }
+
+    /* Estilo específico para la alerta de logout */
+    .alert-logout {
+      background-color: #d4edda;
+      border-color: #c3e6cb;
+      color: #155724;
+    }
     
+    .perro{
+		color: black;
+	}
+	
  .o {
 	color: white !important; /* Establece el color del texto a blanco */
       background-color: #37517e; /* Puedes ajustar el color de fondo según tus necesidades */
       padding: 15px;
-      border-radius: 5px; }
+      border-radius: 5px; 
+      
+      }
+      
+      
+
+ .alert-danger {
+            background-color: red;
+     		border-color: red;
+      		color: white;
+      		  padding: 15px;
+            margin-bottom: 20px;
+            border: 1px solid transparent;
+            border-radius: 4px;
+        }
+   
+      
+      
