--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -27,9 +27,29 @@
             <div class="form sign_in">
                 <h3>Inicio de sesión</h3>
                 <br> 
+                
+                <div th:if=${param.logout}>
+						<div class="alert alert-info">Ha cerrado sesión exitosamente
+						</div>
+					</div>
+					
+					 <div th:if=${param.error}>
+						<div class="alert alert-danger">Usuario o Contraseña Invalido
+						</div>
+					</div>
+				
+				
+					<div th:if=${param.error2}>
+						<div class="alert alert-danger">Por favor, confirma tu correo electrónico para iniciar sesión.
+						</div>
+					</div>
+					
                 <span class="o">Usa tus credenciales en la aplicacion:</span> <br> <br>
 
                 <form th:action="@{/login}" method="post" class="form_input">
+					
+				
+				
                     <div class="type">
                         <input class="input-group__input" type="text" placeholder="Correo electronico" name="username" id="username">
                     </div><br>
@@ -51,18 +71,15 @@
     
             <div class="form sign_up">
                 <h3>Registro</h3>
-                <span class="o">Ingresa tu información para registrarte:</span> <br><br>
                 
-				<div th:if=${param.exito}>
+                
+                <div th:if=${param.exito}>
 					<div class="alert alert-info">Se ha registrado exitosamente a
 						la aplicación. Revise su enlace de verificacion para continuar</div>
 				</div>
 				
-				<div th:if=${param.logout}>
-						<div class="alert alert-info">Ha cerrado sesión exitosamente
-						</div>
-					</div>
-				
+                <span class="o">Ingresa tu información para registrarte:</span> <br><br>
+                		
 				
                 <form th:action="@{/registro}" method="post" class="form_input">
                     <div class="type">
@@ -120,5 +137,10 @@
 		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous"></script>
+		
+		 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  
 
 </html>
