Password Y Login correciones

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/correo2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/correo2.html
@@ -193,7 +193,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:9px 30px 40px 31px;font-family:arial,helvetica,sans-serif;" align="left">
         
   <!--[if mso]><table width="100%"><tr><td><![endif]-->
-    <h1 class="v-text-align v-font-size" style="margin: 0px; color: #023047; line-height: 170%; text-align: center; word-wrap: break-word; font-family: 'Open Sans',sans-serif; font-size: 26px; font-weight: 400;"><span><span><span><strong>Verificación de cuenta</strong></span></span></span></h1>
+    <h1 class="v-text-align v-font-size" style="margin: 0px; color: #023047; line-height: 170%; text-align: center; word-wrap: break-word; font-family: 'Open Sans',sans-serif; font-size: 26px; font-weight: 400;"><span><span><span><strong>Recuperación de cuenta</strong></span></span></span></h1>
   <!--[if mso]></td></tr></table><![endif]-->
 
       </td>
@@ -230,10 +230,10 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:35px 55px 10px;font-family:arial,helvetica,sans-serif;" align="left">
         
   <div class="v-text-align v-font-size" style="font-size: 14px; color: #333333; line-height: 180%; text-align: left; word-wrap: break-word;">
-    <p style="font-size: 14px; line-height: 180%;"><span style="font-size: 18px; line-height: 32.4px; font-family: Lato, sans-serif;"><strong><span style="line-height: 32.4px; font-size: 18px;">Hola [NOMBRE_COMPLETO], </span></strong></span></p>
+    <p style="font-size: 14px; line-height: 180%;"><span style="font-size: 18px; line-height: 32.4px; font-family: Lato, sans-serif;"><strong><span style="line-height: 32.4px; font-size: 18px;">Estimado Usuario, </span></strong></span></p>
 <p style="font-size: 14px; line-height: 180%;"> </p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1em; color: rgba(0, 0, 0, 0.85); font-family: Poppins, poppins-fallback, poppins-fallback-android, sans-serif, sans-serif; font-size: 16px; text-align: justify; white-space: normal; background-color: #ffffff; line-height: 180%;">Gracias por unirse a <strong>BookMyDrive</strong>.</p>
-<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1em; color: rgba(0, 0, 0, 0.85); font-family: Poppins, poppins-fallback, poppins-fallback-android, sans-serif, sans-serif; font-size: 16px; text-align: justify; white-space: normal; background-color: #ffffff; line-height: 180%;">Nos gustaría confirmarle que su cuenta se ha creado correctamente. Para acceder a la aplicación, haga clic en el siguiente enlace para confirmar su identidad.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1em; color: rgba(0, 0, 0, 0.85); font-family: Poppins, poppins-fallback, poppins-fallback-android, sans-serif, sans-serif; font-size: 16px; text-align: justify; white-space: normal; background-color: #ffffff; line-height: 180%;">De parte del servicio de  <strong>BookMyDrive</strong>.</p>
+<p style="box-sizing: border-box; margin-top: 0px; margin-bottom: 1em; color: rgba(0, 0, 0, 0.85); font-family: Poppins, poppins-fallback, poppins-fallback-android, sans-serif, sans-serif; font-size: 16px; text-align: justify; white-space: normal; background-color: #ffffff; line-height: 180%;">Para restablecer su contraseña, haga clic en el siguiente enlace para proceder a ingresar una nueva contraseña.</p>
   </div>
 
       </td>
@@ -250,7 +250,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
 <div class="v-text-align" align="center">
   <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://unlayer.com" style="height:58px; v-text-anchor:middle; width:323px;" arcsize="76%"  stroke="f" fillcolor="#33428d"><w:anchorlock/><center style="color:#FFFFFF;"><![endif]-->
     <a href='[VERIFICATION_LINK]' target="_blank" class="v-button v-font-size" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #33428d; border-radius: 44px;-webkit-border-radius: 44px; -moz-border-radius: 44px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
-      <span style="display:block;padding:20px 70px;line-height:120%;"><strong><span style="font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 16.8px;">V E R I F I C A R     A H O R A</span></strong></span>
+      <span style="display:block;padding:20px 70px;line-height:120%;"><strong><span style="font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 16.8px;">RECUPERAR CUENTA</span></strong></span>
     </a>
     <!--[if mso]></center></v:roundrect><![endif]-->
 </div>
