--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta charset="ISO-8859-1">
-    <title>Forgot Password</title>
+    <title>BookMyDrive</title>
     <!-- Link to Bootstrap CSS -->
 <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
@@ -77,6 +77,22 @@
     text-align: center;
     z-index: 1000;
 }
+input-gray {
+    background-color: #ccc; /* Color de fondo gris para el input */
+    color: #555; /* Color del texto gris para el input */
+}
+
+.btn-gray {
+    background-color: #ccc !important; /* Color de fondo gris para el botón */
+    border-color: #ccc !important; /* Color del borde gris para el botón */
+    color: #555 !important; /* Color del texto gris para el botón */
+}
+
+.btn-gray:hover {
+    background-color: #bbb !important; /* Color de fondo gris más oscuro al pasar el ratón por encima del botón */
+    border-color: #bbb !important; /* Color del borde gris más oscuro al pasar el ratón por encima del botón */
+    color: #444 !important; /* Color del texto gris más oscuro al pasar el ratón por encima del botón */
+}
     </style>
 </head>
 <body>
@@ -97,20 +113,28 @@
         <p th:text="${message}"></p>
     </div>
 
-    <form th:action="@{/forgot_password}" method="post">
+   <form th:action="@{/forgot_password}" method="post">
 
-        <div class="mb-3">
-            <p>Enviaremos un correo para resetear tu contraseña a tu email.</p>
-        </div>
-        <div class="mb-3">
-            <input type="email" name="email" class="form-control" placeholder="Ingresa tu e-mail" required autofocus>
-        </div>
-        <div class="mb-3">
-            <input type="submit" value="Enviar" class="btn btn-primary btn-block">
-            <a class="btn btn-danger" th:href="@{/login}" role="button">Cancelar</a>
-        </div>
+    <div class="mb-3">
+        <p>Enviaremos un correo para resetear tu contraseña a tu email.</p>
+    </div>
 
-    </form>
+    <div class="mb-3">
+        <input type="email" name="email" class="form-control"
+               placeholder="Ingresa tu e-mail" required autofocus
+               th:disabled="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'}"
+               th:classappend="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'} ? 'input-gray' : ''">
+    </div>
+
+    <div class="mb-3">
+        <input type="submit" value="Enviar" class="btn btn-primary btn-block"
+               th:disabled="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'}"
+               th:classappend="${message == 'Te hemos enviado un mensaje a tu correo por favor verifícalo.'} ? 'btn-gray' : ''">
+        <a class="btn btn-danger" th:href="@{/login}" role="button">Cancelar</a>
+    </div>
+
+</form>
+
 </div>
 
 <!-- Add Bootstrap JS and Popper.js scripts here if needed -->
