--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
@@ -58,71 +58,55 @@
     <div class="uni">
 		<div class="section-title">
 					<h2>Pagos</h2>
-					<small>Aqui se puede validar los pagos</small>
+					<small>Aqui se puede validar los pagos realizados en ventanilla</small>
 				</div>
     </div>
     </section>
-    <div class="container-fluid mt-4">
-        <div class="row">
-        
-            <div class="col-md-6">
-                <div class="cuadro position-relative p-2 bg-light rounded mt-2">
-                    <h6>Nombre</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Nombre">
-                    <h6>Asiento</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Asiento">
-                    <h6>Unidad</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Unidad">
-                    <h6>Hora</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Hora">
-                    <h6>Estado</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Estado">
-                </div>
-            </div>
-            <div class="col-md-6 text-center">
-                <!-- Agregar imagen centrada -->
-              <img th:src="@{/images/personal/qr.jpg}"  alt="Imagen" class="mt-2 mx-auto d-block" style="max-width: 20%;" />
-                <!-- Botón Pagar centrado -->
-                <button class="btn btn-primary mt-2 mx-auto d-block" style="width: 200px;">Pagar</button>
-            </div>
-        </div>
-    </div>
-
     <br>
+   
     
-    <div class="container-fluid mt-4">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="cuadro position-relative p-2 bg-light rounded mt-2">
-                    <h6>Nombre</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Nombre">
-                    <h6>Asiento</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Asiento">
-                    <h6>Unidad</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Unidad">
-                    <h6>Hora</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Hora">
-                    <h6>Estado</h6>
-                    <input type="text" class="form-control small-placeholder" placeholder="Estado">
-                </div>
-            </div>
-            <div class="col-md-6 text-center">
-                <!-- Agregar imagen centrada -->
-                <img th:src="@{/images/personal/qr.jpg}"  alt="Imagen" class="mt-2 mx-auto d-block" style="max-width: 20%;" />
-                <!-- Botón Pagar centrado -->
-                <button class="btn btn-primary mt-2 mx-auto d-block" style="width: 200px;">Pagar</button>
-            </div>
-        </div>
-    </div>
+    <center><p id="fecha-actual"></p></center>
+    <div class="container py-4">
+		<div class="card bg-light">
+			<div class="card-body">
 
-    <div class="row mt-4">
-        <div class="col-md-12">
-            <div class="text-center">
-                <!-- Botón Cancelar centrado -->
-                <a class="nav-link btn btn-primary mt-2" th:href="${'/'}" style="width: 200px;">Cancelar</a>
-            </div>
-        </div>
-    </div>
+		
+				<table class="table table-striped table-bordered">
+					<thead class="thead-inverse">
+						<tr>
+							<th class="bg-dark text-white">CLIENTE</th>
+							<th class="bg-dark text-white">ASIENTO</th>
+							<th class="bg-dark text-white">RUTA</th>
+							<th class="bg-dark text-white">UNIDAD</th>
+							<th class="bg-dark text-white">HORA</th>
+							<th class="bg-dark text-white">ESTADO</th>
+							<th class="bg-dark text-white">TOTAL A CANCELAR</th>
+							<th class="bg-dark text-white">PAGADO</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="boleto: ${boletos}">
+							<td th:text="${boleto.usuario.nombre}+ '  ' + ${boleto.usuario.apellido}"></td>
+							<td th:text="${boleto.asiento.fila}+ ' - ' + ${boleto.asiento.columna}"></td>
+							<td th:text="${boleto.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto.cronograma.ruta.rutaDestino}"></td>
+							<td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"></td>
+							<td th:text="${boleto.cronograma.horaSalida}"></td>
+					        <td th:text="${boleto.estado}"></td>
+					        <td th:text="${boleto.totalPago}"></td>
+							
+							<td>
+								<a class="btn btn-danger"
+								th:href="@{/cancelar/boleto/}+ ${boleto.id}+ '/'+ ${boleto.asiento.id}">CANCELAR RESERVACIÓN</a>
+								</td>
+							
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+	
+        
 
     <footer th:replace="layout/layout3 :: footer"></footer>
     <script th:src="@{/js/personal/home.js}"></script>
