--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
@@ -92,7 +92,7 @@
 							<td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"></td>
 							<td th:text="${boleto.cronograma.horaSalida}"></td>
 					        <td th:text="${boleto.estado}"></td>
-					        <td th:text="${boleto.totalPago}"></td>
+					       <td th:text="${boleto.totalPagoFormateado}"></td>
 							
 							<td>
 								<a class="btn btn-danger"
