--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
@@ -130,28 +130,26 @@
             <table class="table table-striped table-bordered" id="miTabla">
 					<thead class="thead-inverse">
 						<tr>
-							<th class="bg-dark text-white">id</th>
-							<th class="bg-dark text-white">usuario</th>
-							<th class="bg-dark text-white">fecha de viaje</th>
-							<th class="bg-dark text-white">hora de salida</th>
-							<th class="bg-dark text-white">numero de asiento</th>
-							<th class="bg-dark text-white">metodo de pago</th>
-							<th class="bg-dark text-white">unidad</th>
-							<th class="bg-dark text-white">ruta</th>
-							<th class="bg-dark text-white">total pagado</th>
+							<th class="bg-dark text-white">CLIENTE</th>
+							<th class="bg-dark text-white">FECHA VIAJE</th>
+							<th class="bg-dark text-white">HORA SALIDA</th>
+							<th class="bg-dark text-white">ASIENTO</th>
+							<th class="bg-dark text-white">METODO PAGO</th>
+							<th class="bg-dark text-white">UNIDAD</th>
+							<th class="bg-dark text-white">RUTA</th>
+							<th class="bg-dark text-white">TOTAL PAGADO</th>
 						</tr>
 					</thead>
 					<tbody>
                     <tr th:each="boleto: ${boletos}">
-							<td th:text="${boleto.id}"></td>
 							<td th:text="${boleto.usuario.email}"></td>
 							<td th:text="${boleto.cronograma.fecha}"></td>
 							<td th:text="${boleto.cronograma.horaSalida}"></td>
 							<td th:text="${boleto.asiento.fila}+ ' - ' + ${boleto.asiento.columna}"></td>
 							<td th:text="${boleto.metodoPago}"></td>
-							<td th:text="${boleto.asiento.unidad.numero}+ ''+ ${boleto.asiento.unidad.cooperativa.nombre}"></td>
+							<td th:text="${boleto.asiento.unidad.cooperativa.nombre}+ ' ' +${boleto.asiento.unidad.numero}"></td>
 							<td th:text="${boleto.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto.cronograma.ruta.rutaDestino}"></td>
-							<td th:text="${boleto.totalPago}"></td>
+							<td th:text="${boleto.totalPagoFormateado}"></td>
 						 </tr>
                 </tbody>
             </table>
