--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
@@ -2,9 +2,11 @@
 body {
   font-family: "Roboto";
   color: #444444;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+display: flex;
+flex-direction: column;
+min-height: 100vh;
+  
+  
 }
 
 a {
@@ -1683,9 +1685,9 @@ section {
   background: #37517e;
   padding: 3em 0;
   text-align: center;
-  margin-top:auto;
-}
+  margin-top: auto;
 
+}
 #footer .footer-newsletter {
   padding: 50px 0;
   background: #f3f5fa;
@@ -1882,4 +1884,51 @@ section {
 
 #viaje a{
 	margin-left: 30%;
+}
+.container {
+	margin-top: 20px;
+}
+
+.card {
+	margin-top: 20px;
+}
+
+#miTabla {
+	width: 100%;
+	border-collapse: collapse;
+	margin-top: 20px;
+}
+
+#miTabla th, #miTabla td {
+	border: 1px solid #dee2e6;
+	padding: 8px;
+	text-align: center;
+}
+
+#miTabla th {
+	background-color: #343a40;
+	color: #fff;
+}
+
+#miTablaContainer {
+	overflow-x: auto;
+}
+
+#generarInforme {
+	display: inline-block;
+	margin-top: 10px;
+	padding: 10px 20px;
+	font-size: 16px;
+	text-align: center;
+	text-decoration: none;
+	background-color: #007bff;
+	color: #fff;
+	border-radius: 5px;
+}
+
+#generarInforme:hover {
+	background-color: #0056b3;
+}
+#services {
+    padding: 10px 0; /* Ajusta el espaciado vertical según tus preferencias */
 }
