--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/activarCamaraQR.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/activarCamaraQR.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
 <head th:replace="layout/layout3 :: head">
-
+ <link rel="stylesheet" th:href="@{/css/personal/home.css}" />
 </head>
+
+    <style>
+        /* Agrega estilos personalizados aquí si es necesario */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+        }
+
+        .services {
+            background-color: #007bff;
+            color: #000;
+            padding: 80px 0;
+        }
+
+        .section-title {
+            text-align: center;
+        }
+
+        .uni {
+            margin-bottom: 30px;
+        }
+
+        #codigoQRResultado {
+            font-size: 18px;
+        }
+
+        .row mt-4 {
+            margin-top: 30px;
+        }
+
+        .text-center img {
+            width: 50%;
+            border-radius: 10px;
+        }
+
+        #video {
+            width: 440px;
+            height: 280px;
+        }
+
+        #fechaContainer {
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+        }
+
+        .d-flex {
+            margin-top: 20px;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+    </style>
 <body>
-    <link rel="stylesheet" th:href="@{/css/personal/home.css}" />
-    
+   
+    <div class="m-3"></div>
     <header th:replace="layout/layout3 :: header"></header>
+    
    <section id="clients" class="clients section-bg">
 			<div class="container">
 
@@ -96,9 +158,9 @@
 <div class="d-flex justify-content-center mt-3">
    
     <div class="mb-2">
-        <button class="btn btn-primary" onclick="escanearCodigoQR()">
-            Escanear QR
-        </button>
+        <button class="btn btn-primary" onclick="escanearCodigoQR()" style="background-color: #37517e; border-color: #37517e; color: #fff;" onmouseover="this.style.backgroundColor='#1a2b40'" onmouseout="this.style.backgroundColor='#37517e'">
+    Escanear QR
+</button>
     </div>
 </div>
 
