--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head th:replace="layout/layout3 :: head">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
-    <link rel="stylesheet" th:href="@{/css/personal/home.css}" />
-    <header th:replace="layout/layout3 :: header"></header>
+	<div class="m-3"></div>
+<header th:replace="layout/layout3 :: header"></header>
 <link rel="stylesheet" th:href="@{/Administrador/style3.css}" />
-  <section id="clients" class="clients section-bg">
+  <link rel="stylesheet" th:href="@{/css/personal/home.css}" />
+	<section id="clients" class="clients section-bg">
 			<div class="container">
 
 				<div class="row" data-aos="zoom-in">
@@ -51,64 +54,75 @@
 
 			</div>
 		</section>
-		<section id="services" class="services section-bg">
-			
-			<div class="container" data-aos="fade-up">
-	
-    <div class="uni">
-		<div class="section-title">
-					<h2>Pagos</h2>
-					<small>Aqui se puede validar los pagos realizados en ventanilla</small>
-				</div>
+<section id="services" class="services section-bg">
+    <div class="container" data-aos="fade-up">
+        <div class="uni">
+            <div class="section-title">
+                <h2>Pagos</h2>
+                <small>Aquí se pueden validar los pagos realizados en ventanilla</small>
+            </div>
+        </div>
     </div>
-    </section>
-    <br>
-   
-    
-    <center><p id="fecha-actual"></p></center>
-    <div class="container py-4">
-		<div class="card bg-light">
-			<div class="card-body">
+</section>
 
-		
-				<table class="table table-striped table-bordered">
-					<thead class="thead-inverse">
-						<tr>
-							<th class="bg-dark text-white">CLIENTE</th>
-							<th class="bg-dark text-white">ASIENTO</th>
-							<th class="bg-dark text-white">RUTA</th>
-							<th class="bg-dark text-white">UNIDAD</th>
-							<th class="bg-dark text-white">HORA</th>
-							<th class="bg-dark text-white">ESTADO</th>
-							<th class="bg-dark text-white">TOTAL A CANCELAR</th>
-							<th class="bg-dark text-white">PAGADO</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="boleto: ${boletos}">
-							<td th:text="${boleto.usuario.nombre}+ '  ' + ${boleto.usuario.apellido}"></td>
-							<td th:text="${boleto.asiento.fila}+ ' - ' + ${boleto.asiento.columna}"></td>
-							<td th:text="${boleto.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto.cronograma.ruta.rutaDestino}"></td>
-							<td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"></td>
-							<td th:text="${boleto.cronograma.horaSalida}"></td>
-					        <td th:text="${boleto.estado}"></td>
-					       <td th:text="${boleto.totalPagoFormateado}"></td>
-							
-							<td>
-								<a class="btn btn-danger"
-								th:href="@{/cancelar/boleto/}+ ${boleto.id}+ '/'+ ${boleto.asiento.id}">CANCELAR RESERVACIÓN</a>
-								</td>
-							
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-	
-        
+<br>
 
-    <footer th:replace="layout/layout3 :: footer"></footer>
-    <script th:src="@{/js/personal/home.js}"></script>
+<center><p id="fecha-actual"></p></center>
+
+<div class="container py-4">
+    <div class="card bg-light">
+        <div class="card-body">
+            <!-- Agrega la clase 'table-responsive' para hacer la tabla responsive -->
+          	<div id="miTablaContainer" class="table-responsive">
+						<table class="table table-striped table-bordered" id="miTabla">
+                <thead class="thead-inverse">
+                    <tr>
+                        <!-- Agrega las clases 'text-center' para centrar el texto en las celdas -->
+                        <th class="bg-dark text-white text-center">CLIENTE</th>
+                        <th class="bg-dark text-white text-center">ASIENTO</th>
+                        <th class="bg-dark text-white text-center">RUTA</th>
+                        <th class="bg-dark text-white text-center">UNIDAD</th>
+                        <th class="bg-dark text-white text-center">HORA</th>
+                        <th class="bg-dark text-white text-center">ESTADO</th>
+                        <th class="bg-dark text-white text-center">TOTAL A CANCELAR</th>
+                        
+                        <th class="bg-dark text-white text-center">ACCIONES</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="boleto: ${boletos}">
+                        <td th:text="${boleto.usuario.nombre}+ '  ' + ${boleto.usuario.apellido}"
+                            class="text-center"></td>
+                        <td th:text="${boleto.asiento.fila}+ ' - ' + ${boleto.asiento.columna}"
+                            class="text-center"></td>
+                        <td th:text="${boleto.cronograma.ruta.rutaOrigen}+ ' - ' + ${boleto.cronograma.ruta.rutaDestino}"
+                            class="text-center"></td>
+                        <td th:text="${boleto.cronograma.unidad.numero}+ ' - ' + ${boleto.cronograma.unidad.cooperativa.nombre}"
+                            class="text-center"></td>
+                        <td th:text="${boleto.cronograma.horaSalida}" class="text-center"></td>
+                        <td th:text="${boleto.estado}" class="text-center"></td>
+                        <td th:text="${boleto.totalPagoFormateado}" class="text-center"></td>
+                        <td class="text-center">
+                            <a class="btn btn-danger"
+                                th:href="@{/cancelar/boleto/}+ ${boleto.id}+ '/'+ ${boleto.asiento.id}">CANCELAR
+                                RESERVACIÓN</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script th:src="@{/js/personal/home.js}"></script>
+
+<!-- Agrega el script de Bootstrap (asegúrate de incluirlo) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<footer th:replace="layout/layout3 :: footer"></footer>
+
 </body>
 </html>
