Cambios en administrador

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
@@ -3,12 +3,19 @@
 
 <head th:replace="layout/layout :: head"></head>
 <link rel="stylesheet" th:href="@{/Administrador/style.css}" />
-
+<style>
+.btn-secondary:hover {
+	background-color: #1a2b40 !important;
+	color: #fff !important;
+}
+</style>
 <body>
 	<header th:replace="layout/layout :: header"></header>
+	
 	   <section id="clients" class="clients section-bg">
+	 
 			<div class="container">
-
+				 
 				<div class="row" data-aos="zoom-in">
 
 					<div
@@ -51,9 +58,12 @@
 
 			</div>
 		</section>
+	<div >
+		 
+		</div>
 		<section id="services" class="services section-bg">
 			
-			<div class="container" data-aos="fade-up">
+			
 	
     <div class="uni">
 		<div class="section-title">
@@ -62,21 +72,27 @@
 				</div>
     </div>
     </section>
+     <div class="alert alert-success" th:if="${success != null}" th:text="${success}"></div>
+    <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+    <div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}"></div>
+    <div class="alert alert-info" th:if="${info != null}" th:text="${info}"></div>
 	<div class="container py-2">
   <div class="card bg-light">
     <div class="card-header" th:text="${titulo}"></div>
     <div class="card-body">
 
+      <div class="m-3"></div>
+
       <div class="table-responsive">
-        <table class="table table-striped table-bordered" style="max-width: 800px; margin: auto;">
+        <table class="table table-striped table-bordered" style="max-width: 1200px; margin: auto;">
           <thead class="thead-inverse">
             <tr>
               <th class="bg-dark text-white">Id</th>
               <th class="bg-dark text-white">Ruta de origen</th>
               <th class="bg-dark text-white">Ruta de destino</th>
               <th class="bg-dark text-white">Costo de la ruta</th>
-              <th class="bg-dark text-white">Editar</th>
-              <th class="bg-dark text-white">Eliminar</th>
+              <th class="bg-dark text-white">Acciones</th>
+              
             </tr>
           </thead>
           <tbody>
@@ -85,14 +101,25 @@
               <td th:text="${ruta.rutaOrigen}"></td>
               <td th:text="${ruta.rutaDestino}"></td>
               <td th:text="${ruta.costoRuta}"></td>
-              <td><a class="btn btn-secondary btn-xs" th:href="@{/ruta/form/}+ ${ruta.id}">Editar</a></td>
-              <td><a class="btn btn-danger btn-xs" th:href="@{/ruta/eliminar/}+ ${ruta.id}">Eliminar</a></td>
+            <td class="d-flex align-items-center justify-content-center">
+									<a class="btn btn-secondary btn-xs mx-1"
+									th:href="@{/ruta/form/{id}(id=${ruta.id})}"> <i
+										class="bi bi-pencil-square"></i>
+								</a> <a class="btn btn-danger btn-xs mx-1"
+									th:href="@{/ruta/eliminar/{id}(id=${ruta.id})}"> <i
+										class="bi bi-trash-fill"></i>
+								</a>
+								</td>
             </tr>
           </tbody>
         </table>
       </div>
 
-      <a th:href="@{/ruta/form}" class="btn btn-secondary">Crear Ruta</a>
+      <div class="mt-3" style="margin-left: 30px;">
+					<a th:href="@{/ruta/form}" class="btn btn-secondary"
+						style="background-color: #37517e; transition: background-color 0.3s ease;">
+						Crear Ruta </a>
+				</div>
     </div>
   </div>
 </div>
