--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCooperativa.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCooperativa.html
@@ -3,99 +3,114 @@
 
 <head th:replace="layout/layout :: head"></head>
 <link rel="stylesheet" th:href="@{/Administrador/style.css}" />
-
+<style>
+.btn-secondary:hover {
+	background-color: #1a2b40 !important;
+	color: #fff !important;
+}
+</style>
 <body>
-	
+
 
 
 	<header th:replace="layout/layout :: header"></header>
-	
-	  <section id="clients" class="clients section-bg">
-			<div class="container">
 
-				<div class="row" data-aos="zoom-in">
+	<section id="clients" class="clients section-bg">
+		<div class="container">
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-1.png" class="img-fluid"
-							alt="">
-					</div>
+			<div class="row" data-aos="zoom-in">
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-2.png" class="img-fluid"
-							alt="">
-					</div>
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+				</div>
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-3.png" class="img-fluid"
-							alt="">
-					</div>
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+				</div>
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-4.png" class="img-fluid"
-							alt="">
-					</div>
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+				</div>
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-5.png" class="img-fluid"
-							alt="">
-					</div>
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+				</div>
 
-					<div
-						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img src="assets/img/clients/client-6.png" class="img-fluid"
-							alt="">
-					</div>
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+				</div>
 
+				<div
+					class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+					<img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
 				</div>
 
 			</div>
-		</section>
-		<section id="services" class="services section-bg">
-			
-			<div class="container" data-aos="fade-up">
-	
-    <div class="uni">
-		<div class="section-title">
-					<h2>Cooperativas</h2>
-					<small>Aqui puede administrar las cooperativas de las unidades</small>
-				</div>
-    </div>
-    </section>
-	<div class="container py-4">
+
+		</div>
+	</section>
+	<section id="services" class="services section-bg">
+
+
+
+		<div class="uni">
+			<div class="section-title">
+				<h2>Cooperativas</h2>
+				<small>Aqui puede administrar las cooperativas de las
+					unidades</small>
+			</div>
+		</div>
+	</section>
+	 <div class="alert alert-success" th:if="${success != null}" th:text="${success}"></div>
+    <div class="alert alert-danger" th:if="${error != null}" th:text="${error}"></div>
+    <div class="alert alert-warning" th:if="${warning != null}" th:text="${warning}"></div>
+    <div class="alert alert-info" th:if="${info != null}" th:text="${info}"></div>
+	<div class="container py-2">
 		<div class="card bg-light">
 			<div class="card-header" th:text="${titulo}"></div>
 			<div class="card-body">
 
+				<div class="m-3"></div>
 
-                 <div class="m-3"></div>
-				<table class="table table-striped table-bordered">
-					<thead class="thead-inverse">
-						<tr>
-						<tr>
-							<th class="bg-dark text-white">Id</th>
-							<th class="bg-dark text-white">Nombre</th>
-							<th class="bg-dark text-white">Editar</th>
-							<th class="bg-dark text-white">Eliminar</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:each="cooperativa: ${cooperativas}">
-							<td th:text="${cooperativa.id}"></td>
-							<td th:text="${cooperativa.nombre}"></td>
-							<td><a class="btn btn-secondary btn-xs"
-								th:href="@{/cooperativa/form/}+ ${cooperativa.id}">Editar</a></td>
-							<td><a class="btn btn-danger btn-xs"
-								th:href="@{/cooperativa/eliminar/}+ ${cooperativa.id}">Eliminar</a></td>
-						</tr>
-					</tbody>
-				</table>
-				<a th:href="@{/cooperativa/form}" class="btn btn-secondary">Crear
-					Cooperativa</a>
+				<div class="table-responsive">
+					<table class="table table-striped table-bordered"
+						style="max-width: 1200px; margin: auto;">
+						<thead class="thead-inverse">
+							<tr>
+							<tr>
+								<th class="bg-dark text-white">Id</th>
+								<th class="bg-dark text-white">Nombre</th>
+								<th class="bg-dark text-white">Acciones</th>
+
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="cooperativa: ${cooperativas}">
+								<td th:text="${cooperativa.id}"></td>
+								<td th:text="${cooperativa.nombre}"></td>
+								<td class="d-flex align-items-center justify-content-center">
+									<a class="btn btn-secondary btn-xs mx-1"
+									th:href="@{/cooperativa/form/{id}(id=${cooperativa.id})}"> <!-- Corregido aquí -->
+										<i class="bi bi-pencil-square"></i>
+								</a> <a class="btn btn-danger btn-xs mx-1"
+									th:href="@{/cooperativa/eliminar/{id}(id=${cooperativa.id})}"> <!-- Corregido aquí -->
+										<i class="bi bi-trash-fill"></i>
+								</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="mt-3" style="margin-left: 30px;">
+					<a th:href="@{/cooperativa/form}" class="btn btn-secondary"
+						style="background-color: #37517e; transition: background-color 0.3s ease;">
+						Crear Cooperativa </a>
+				</div>
+				</div>
 			</div>
 		</div>
 	</div>
