Filtrar reportes by Date

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style3.css
@@ -10,13 +10,13 @@ min-height: 100vh;
 }
 
 a {
-  color: #37517e;
+  color: #1a2b40;
   text-decoration: none;
   font-family: Roboto;
 }
 
 a:hover {
-  color: #3aabe0;
+  color: #1a2b40;
   text-decoration: none; 
 }
 
